tests/semantic/invalid/return_errors/missing.src
fn test() -> int {
    int x = 5;
}
